<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GitHub</string>
    
    <!-- Menu items -->
    <string name="action_accounts">Accounts</string>
    <string name="action_refresh">Refresh</string>
    
    <!-- Network Related Strings -->
    <string name="invalid_account_name">Unable to retrieve profile info.\nAccount name may be invalid.</string>
    <string name="no_network_connection">No network connection available.</string>
    <string name="access_token">58749e3006eb6f5b5e2ccd1bede67a305199f0c8</string>
    
    <!-- Content Descriptions -->
    <string name="avatar_content_description">Avatar Image</string>
    <string name="logo_background_content_description">Logo Background</string>
    <string name="view_profile_button_content_description">View Profile Button</string>
    <string name="github_logo_background_content_description">Github Logo Background</string>
    
    <!-- View texts -->
    <string name="user_account_hint">Enter User Account</string>
    <string name="view_profile_button_text">View Profile</string>
    <string name="empty_events_fragment_text">No received events</string>
    
    <!-- Octicons -->
    <string name="octicon_company">\uf019</string>
    <string name="octicon_location">\uf060</string>
    <string name="octicon_mail">\uf03b</string>
    <string name="octicon_link">\uf05c</string>
    <string name="octicon_clock">\uf046</string>
    <string name="connection_closed">Connection closed by peer</string>
    <string name="github">GitHub</string>


</resources>