<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.sample.github"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp" >

        <com.sample.github.views.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:round_background="true"
            app:corner_radius="100dp"
            app:border_color="@color/black"
            app:border_width="1dp"
            android:contentDescription="@string/avatar_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/default_gravatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <com.sample.github.views.CustomFontTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                app:textFont="Roboto_Regular"/>

            <com.sample.github.views.CustomFontTextView
                android:id="@+id/html_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:textSize="16sp"
                app:textFont="Roboto_Light"/>

            <View
                android:id="@+id/divider1"
                style="@style/Divider" />

            <LinearLayout
                android:id="@+id/companyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/companyIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/octicon_company"
                    android:textSize="16sp"
                    app:textFont="Octicons_Regular"/>

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:textFont="Roboto_Light"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/locationIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/octicon_location"
                    android:textSize="16sp"
                    app:textFont="Octicons_Regular"/>

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:textFont="Roboto_Light"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/emailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/octicon_mail"
                    android:textSize="16sp"
                    app:textFont="Octicons_Regular"/>

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:textSize="16sp"
                    app:textFont="Roboto_Light"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/blogLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/blogIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/octicon_link"
                    android:textSize="16sp"
                    app:textFont="Octicons_Regular"/>

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:textFont="Roboto_Light"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/createdAtLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/createdAtIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="3dp"
                    android:text="@string/octicon_clock"
                    android:textSize="16sp"
                    app:textFont="Octicons_Regular"/>

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/createdAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:textFont="Roboto_Light"/>
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:textFont="Roboto_Regular"/>

                <com.sample.github.views.CustomFontTextView
                    android:id="@+id/following"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:textFont="Roboto_Regular"/>
            </LinearLayout>

            <View style="@style/Divider" />

            <com.sample.github.views.CustomFontTextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                app:textFont="Roboto_Light"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>